fix: header align center

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -238,7 +238,7 @@
 .main-menu {
   ul {
     margin: 0;
-    padding: 0;
+    padding: 80px;
     position: relative;
     li {
       display: inline-block;
